--- a/.github/workflows/MainUpdater.yaml
+++ b/.github/workflows/MainUpdater.yaml
@@ -5,9 +5,12 @@ on:
     branches:
       - master
   schedule:
-    - cron: '0 */6 * * *'
-  workflow_dispatch:  
+    - cron: '0 0 * * *'  # Once a day
+  workflow_dispatch:
 
+permissions:
+  contents: write
+  pull-requests: write
 
 jobs:
   update:
@@ -18,15 +21,26 @@ jobs:
         uses: actions/checkout@master
         with:
           fetch-depth: 1
+          
       - name: ✨ Create ReadMe.md
         run: |
           cd ${GITHUB_WORKSPACE}/
-          npm i
-          node src/update.js
+          npm i || exit 1
+          node src/update.js || exit 1
+          
+      - name: Check for changes
+        id: git-check
+        run: |
+          if [[ -z "$(git status --porcelain)" ]]; then
+            echo "No changes to commit"
+            exit 0
+          fi
+          
       - name: 🚀 Deploy
+        if: success() && steps.git-check.outcome == 'success'
         run: |
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           git add .
           git commit -am "[Automatic] Updated ReadMe.md"
-          git push --all -f https://${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git
+          git push origin master
